[tool.poetry]
name = "blepjr"
version = "0.1.0"
description = "Third Second try at mkaing a discord management bot"
authors = ["Justin Martin <professional@justinm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0"
emojis = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
